Draft for candidate details

--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <h1> My Portfolio</h1>
-    <h2> My top 3 websites</h2>
-    <ol>
-        <li><a href="www.youtube.com">Youtube</a> </li>
-        <li><a href="www.instagram.com">Instagram</a></li>
-        <li><a href="www.x.com">Twitter</a></li>
-    </ol>
+    <h1> Know your leader</h1>
+    <h2> The election comission website provides details about parties and candidates</h2>
+    
+    <a href="https://eci.gov.in/"> Election Comission</a>
 
     <a href="./public/about.html">About me</a>
 </body>
