--- a/public/about.html
+++ b/public/about.html
@@ -6,6 +6,9 @@
     <title>About me</title>
 </head>
 <body>
-    <h1> A Software developer learning web development</h1>
+    <h1> A not for profit project to enable easy access of public records about your MP and MLAs</h1>
+    <p> Political party affliation, number of voters in your constituency, criminal cases against your MP/MLA, 
+        Records of funds released by central and the state goverment for your area and much much more....
+    </p>
 </body>
 </html>
