--- a/public/about.html
+++ b/public/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
+    <link rel="stylesheet" href="../assets/about.css"
 </head>
 <body>
     <h1> A not for profit project to enable easy access of public records about your MP and MLAs</h1>
